--- a/freeCode Camp Projects/Project 5 - Survey Form/index.html
+++ b/freeCode Camp Projects/Project 5 - Survey Form/index.html
@@ -10,17 +10,25 @@
     <h1 id="title">Survey Form</h1>
     <p id="description">Description</p>
     <form action="" id="survey-form">
-        <label for="" id="name-label">Name <input type="text" name="" id="name"></label>
-        <label for="" id="email-label">Email <input type="email" name="" id="email"></label>
-        <label for="" id="number-label">Number <input type="number" name="" id="number" min="0" max="100"></label>
-        <select name="" id="dropdown">
-            <option value="">Dropdown Option 1</option>
-            <option value="">Dropdown Option 2</option>
-        </select>
-        <label for=""><input type="radio" name="radio"> Radio Option 1</label>
-        <label for=""><input type="radio" name="radio"> Radio Option 2</label>
+        <div class="basic-information">
+            <label for="" id="name-label">Name <input type="text" name="" id="name"></label>
+            <label for="" id="email-label">Email <input type="email" name="" id="email"></label>
+            <label for="" id="number-label">Number <input type="number" name="" id="number" min="0" max="100"></label>
+        </div>
+        <div class="dropdown-question">
+            <select name="" id="dropdown">
+                <option value="">Dropdown Option 1</option>
+                <option value="">Dropdown Option 2</option>
+            </select>
+        </div>
+        <div class="radio-question">
+            <label for=""><input type="radio" name="radio"> Radio Option 1</label>
+            <label for=""><input type="radio" name="radio"> Radio Option 2</label>
+        </div>
+        <div class="checkbox-question">
         <label for=""><input type="checkbox" value=""> Checkbox Option 1</label>
         <label for=""><input type="checkbox" value=""> Checkbox Option 2</label>
+        </div>
         <textarea name="" id="textarea" cols="30" rows="10"></textarea>
         <button id="submit">Submit</button>
     </form>
