--- a/freeCode Camp Projects/Project 5 - Survey Form/index.html
+++ b/freeCode Camp Projects/Project 5 - Survey Form/index.html
@@ -3,32 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Survey Form</title>
+    <title>Newcomer Survey Form</title>
     <link rel="stylesheet" href="/freeCode Camp Projects/Project 5 - Survey Form/styles.css">
 </head>
 <body>
-    <h1 id="title">Survey Form</h1>
-    <p id="description">Description</p>
+    <h1 id="title" class="title">Newcomer Survey Form</h1>
+    <hr>
+    <h2 id="tagline" class="tagline">Welcome to Church!</h3>
+    <p id="description" class="description">We encourage you to fill up this survey in order for us to be able to connect with you better. Rest assured, we do not share your information to others without your permission.</p>
+    <hr>
     <form action="" id="survey-form">
+        <h3>Basic Information</h3>
         <div class="basic-information">
-            <label for="" id="name-label">Name <input type="text" name="" id="name"></label>
-            <label for="" id="email-label">Email <input type="email" name="" id="email"></label>
-            <label for="" id="number-label">Number <input type="number" name="" id="number" min="0" max="100"></label>
+            <div class="form-group">
+                <label for="" id="name-label">Name</label>
+                <input type="text" name="name" id="name" class="form-line" placeholder=" Juan dela Cruz">
+            </div>
+            <div class="form-group">
+                <label for="email" id="email-label">Email</label>
+                <input type="email" name="email" id="email" class="form-line" placeholder=" sample@email.com">
+            </div>
+            <div class="form-group">
+                <label for="" id="phone-label">Phone Number</label>
+                <input type="tel" name="phone" id="phone" class="form-line" placeholder=" 09876543210" pattern="[0][9][0-9]{9}">
+            </div>
+            <div class="form-group">
+                <label for="" id="number-label">Age (optional)</label>
+                <input type="number" name="number" id="number" class="form-line" min="0" max="120" placeholder=" 18">
+            </div>
         </div>
+        <h3>Section Header</h3>
         <div class="dropdown-question">
             <select name="" id="dropdown">
                 <option value="">Dropdown Option 1</option>
                 <option value="">Dropdown Option 2</option>
             </select>
         </div>
+        <h3>Section Header</h3>
         <div class="radio-question">
             <label for=""><input type="radio" name="radio"> Radio Option 1</label>
             <label for=""><input type="radio" name="radio"> Radio Option 2</label>
         </div>
+        <h3>Section Header</h3>
         <div class="checkbox-question">
-        <label for=""><input type="checkbox" value=""> Checkbox Option 1</label>
-        <label for=""><input type="checkbox" value=""> Checkbox Option 2</label>
+            <label for=""><input type="checkbox" value=""> Checkbox Option 1</label>
+            <label for=""><input type="checkbox" value=""> Checkbox Option 2</label>
         </div>
+        <h3>Section Header</h3>
         <textarea name="" id="textarea" cols="30" rows="10"></textarea>
         <button id="submit">Submit</button>
     </form>
