--- a/freeCode Camp Projects/Project 7 - Photo Gallery/index.html
+++ b/freeCode Camp Projects/Project 7 - Photo Gallery/index.html
@@ -11,15 +11,15 @@
         <h1>css flexbox photo gallery</h1>
     </header>
     <div class="gallery">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="">
-        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="A sleeping cat">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/2.jpg" alt="A cat laying down upside-down">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/3.jpg" alt="A cat with a mixture of black, gray, and brown fur">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/4.jpg" alt="A cat sleeping under a duvet">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/5.jpg" alt="A small white cat with blue eyes">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/6.jpg" alt="A pair of baby cats">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/7.jpg" alt="A cat peeking from under a blanket">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/8.jpg" alt="An orange cat staring directly at the camera">
+        <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/9.jpg" alt="A black and white cat laying atop each other">
     </div>
 </body>
 </html>
