--- a/freeCode Camp Projects/Project 5 - Survey Form/index.html
+++ b/freeCode Camp Projects/Project 5 - Survey Form/index.html
@@ -17,11 +17,11 @@
         <div class="basic-information">
             <div class="form-group">
                 <label for="" id="name-label">Name</label>
-                <input type="text" name="name" id="name" class="form-line" placeholder=" Juan dela Cruz">
+                <input type="text" name="name" id="name" class="form-line" placeholder=" Juan dela Cruz" required>
             </div>
             <div class="form-group">
                 <label for="email" id="email-label">Email</label>
-                <input type="email" name="email" id="email" class="form-line" placeholder=" sample@email.com">
+                <input type="email" name="email" id="email" class="form-line" placeholder=" sample@email.com" required>
             </div>
             <div class="form-group">
                 <label for="" id="phone-label">Phone Number</label>
@@ -41,8 +41,8 @@
         </div>
         <h3>Section Header</h3>
         <div class="radio-question">
-            <label for=""><input type="radio" name="radio"> Radio Option 1</label>
-            <label for=""><input type="radio" name="radio"> Radio Option 2</label>
+            <label for=""><input type="radio" name="radio" value=""> Radio Option 1</label>
+            <label for=""><input type="radio" name="radio" value=""> Radio Option 2</label>
         </div>
         <h3>Section Header</h3>
         <div class="checkbox-question">
