--- a/freeCode Camp Projects/Project 8 - Nutrition Label/index.html
+++ b/freeCode Camp Projects/Project 8 - Nutrition Label/index.html
@@ -12,9 +12,7 @@
     <div class="label">
         <header>
             <h1 class="bold">Nutrition Facts</h1>
-                <div class="divider">
-                    
-                </div>
+            <div class="divider"></div>
             <p>8 servings per container</p>
             <p class="bold">Serving size <span>2/3 cup (55g)</span></p>
         </header>
@@ -25,6 +23,19 @@
                 <p>Calories</p>
             </div>
             <span>230</span>
+        </div>
+        <div class="divider medium"></div>
+        <div class="daily-value small-text">
+            <p class="no-divider bold right">% Daily Value *</p>
+            <div class="divider"></div>
+            <p><span><span class="bold">Total Fat</span> 8g</span><span class="bold">10%</span></p>
+            <p class="no-divider indent">Saturated Fat 1g <span class="bold">5%</span></p>
+            <div class="divider"></div>
+            <p class="indent no-divider"><span><i>Trans</i> Fat 0g</span></p>
+            <div class="divider"></div>
+            <p><span><span class="bold">Cholesterol</span> 0mg</span><span class="bold"> 0%</span></p>
+            <p><span><span class="bold">Sodium</span> 160mg</span><span class="bold"> 7%</span></p>
+            <p><span><span class="bold">Total Carbohydrate</span> 37g</span><span class="bold"> 13%</span></p>
         </div>
     </div>
 </body>
