--- a/freeCode Camp Projects/Project 8 - Nutrition Label/index.html
+++ b/freeCode Camp Projects/Project 8 - Nutrition Label/index.html
@@ -36,6 +36,20 @@
             <p><span><span class="bold">Cholesterol</span> 0mg</span><span class="bold"> 0%</span></p>
             <p><span><span class="bold">Sodium</span> 160mg</span><span class="bold"> 7%</span></p>
             <p><span><span class="bold">Total Carbohydrate</span> 37g</span><span class="bold"> 13%</span></p>
+            <p class="no-divider indent">Dietary Fiber 4g</p>
+            <div class="divider"></div>
+            <p class="no-divider indent">Total Sugars 12g</p>
+            <div class="divider double-indent"></div>
+            <p class="double-indent no-divider">Includes 10g Added Sugars <span class="bold">20%</span></p>
+            <div class="divider"></div>
+            <p class="no-divider"><span class="bold">Protein</span> 3g</p>
+            <div class="large divider"></div>
+            <p>Vitamin D 2mcg <span class="right">10%</span></p>
+            <p>Calcium 260mg <span class="right">20%</span></p>
+            <p>Iron 8mg <span class="right">45%</span></p>
+            <p class="no-divider">Potassium 235mg <span class="right">6%</span></p>
+            <div class="medium divider"></div>
+            <p class="note">* The % Daily Value (DV) tells you how much a nutrient in a serving of food contributes to a daily diet. 2,000 calories a day is used for general nutrition advice.</p>
         </div>
     </div>
 </body>
