[P9] Completed the header

--- a/freeCode Camp Projects/Project 9 - Quiz/index.html
+++ b/freeCode Camp Projects/Project 9 - Quiz/index.html
@@ -8,6 +8,19 @@
     <title>freeCodecamp HTML and CSS Quiz</title>
 </head>
 <body>
-    
+    <header>
+        <img src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freeCodeCamp Logo" id="logo">
+        <h1>HTML/CSS Quiz</h1>
+        <nav>
+            <ul>
+                <li><a href="">INFO</a></li>
+                <li><a href="">HTML</a></li>
+                <li><a href="">CSS</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
