--- a/freeCode Camp Projects/Project 9 - Quiz/index.html
+++ b/freeCode Camp Projects/Project 9 - Quiz/index.html
@@ -77,7 +77,26 @@
             </section>
             <section role="region" aria-labelledby="css-questions">
                 <h2 id="css-questions">CSS Questions</h2>
+                <div class="formrow">
+                    <div class="question-block">
+                        <label for="q3">Are you a frontend developer?</label>
+                    </div>
+                    <div class="answer">
+                        <select name="q3" id="q3" required>
+                            <option value="">Select an option</option>
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select>
+                    </div>
+                    <div class="question-block">
+                        <label for="q4">Do you have any questions?</label>
+                    </div>
+                    <div class="answer">
+                        <textarea name="q4" id="q4" cols="30" rows="10" placeholder="Who is flexbox?"></textarea>
+                    </div>
+                </div>
             </section>
+            <button type="submit">Send</button>
         </form>
     </main>
 </body>
