--- a/freeCode Camp Projects/Project 10 - Tribute Page/ index.html
+++ b/freeCode Camp Projects/Project 10 - Tribute Page/ index.html
@@ -15,7 +15,7 @@
             <img id="image" src="https://images4.fanpop.com/image/photos/24500000/Harry-Ron-and-Hermione-Wallpaper-harry-ron-and-hermione-24502072.jpg" alt="The Golden Trio gathered in the Gryffindor common room">
             <figcaption id="img-caption">Ron, Hermione, and Harry (left to right) discussing in the Gryffindor common room.</figcaption>
         </figure>
-        <p>For more in-depth information about Hermione Granger, click <a id="tribute-link" href="https://harrypotter.fandom.com/wiki/Hermione_Granger" target="_blank">here</a>.</p>
+        <p id="footer">For more in-depth information about Hermione Granger, click <a id="tribute-link" href="https://harrypotter.fandom.com/wiki/Hermione_Granger" target="_blank">here</a>.</p>
     </main>
 </body>
 </html>
