[P20] Completed v2 of project

--- a/freeCode Camp Projects/Project 20 - Portfolio Website/index.html
+++ b/freeCode Camp Projects/Project 20 - Portfolio Website/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav id="navbar">
+        <p id="logo-text">DL</p>
         <ul>
             <li><a href="#welcome-section">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -15,11 +16,13 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <h1>Welcome</h1>
+        <p>Hi, I am<p>
+        <h1><i><u>DESTINY</u></i></h1>
+        <p>an IT student<p>
     </section>
     <section id="projects">
         <div class="project-tile">
-            <a href="https://github.com/DLitaoen/CIT14-2H-Litaoen">My GitHub Repo</a>
+            <a href="https://github.com/DLitaoen?tab=repositories" target="_blank">My GitHub Repositories</a>
         </div>
     </section>
     <section id="contact">
