--- a/freeCode Camp Projects/Project 10 - Tribute Page/ index.html
+++ b/freeCode Camp Projects/Project 10 - Tribute Page/ index.html
@@ -3,18 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/freeCode Camp Projects/Project 10 - Tribute Page/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Tribute Page</title>
 </head>
 <body>
     <main id="main">
-        <img id="hermione-portrait" src="https://images4.fanpop.com/image/photos/16000000/Hermione-HBP-hermione-granger-16048675.jpg" alt="Hermione Jean Granger as portrayed by Emma Watson">
-        <h1 id="title">Hermione Jean Granger</h1>
-        <p id="tribute-info"><i>the brightest witch of her age</i></p>
-        <figure id="img-div">
-            <img id="image" src="https://images4.fanpop.com/image/photos/24500000/Harry-Ron-and-Hermione-Wallpaper-harry-ron-and-hermione-24502072.jpg" alt="The Golden Trio gathered in the Gryffindor common room">
-            <figcaption id="img-caption">Ron, Hermione, and Harry (left to right) discussing in the Gryffindor common room.</figcaption>
-        </figure>
+        <div id="header">
+            <img id="hermione-portrait" src="https://images4.fanpop.com/image/photos/16000000/Hermione-HBP-hermione-granger-16048675.jpg" alt="Hermione Jean Granger as portrayed by Emma Watson">
+            <h1 id="title">Hermione Jean Granger</h1>
+            <p id="tribute-info"><i>the brightest witch of her age</i></p>
+        </div>
+        <div id="golden-trio">
+            <figure id="img-div">
+                <img id="image" src="https://images4.fanpop.com/image/photos/24500000/Harry-Ron-and-Hermione-Wallpaper-harry-ron-and-hermione-24502072.jpg" alt="The Golden Trio gathered in the Gryffindor common room">
+                <figcaption id="img-caption">Ron, Hermione, and Harry (left to right) discussing in the Gryffindor common room.</figcaption>
+            </figure>
+        </div>
+        <div id="impressive-moments">
+            <h2>Most Impressive Moments</h2>
+            <p><i>according to the <a href="https://www.wizardingworld.com/features/hermiones-best-moments" target="_blank">Wizarding World</a></i></p>
+            <div class="side-scroll-container">
+                <img src="./images/impressive-moments-1.png" alt="Her Hogwarts record">
+                <img src="./images/impressive-moments-2.png" alt="Setting up S.P.E.W.">
+                <img src="./images/impressive-moments-3.png" alt="Her use of ‘cool logic in the face of fire’">
+                <img src="./images/impressive-moments-4.png" alt="Brewing Polyjuice Potion">
+                <img src="./images/impressive-moments-5.png" alt="Her preparations for the Horcrux hunt">
+                <img src="./images/impressive-moments-6.png" alt="Setting up Dumbledore's Army">
+                <img src="./images/impressive-moments-7.png" alt="Her refusal to tell Bellatrix anything whilst being tortured">
+                <img src="./images/impressive-moments-8.png" alt="Becoming the actual Minister for Magic">
+            </div>
+        </div>
+        <div class="quote">
+            <p class="quote-line">"Books! And cleverness! There are more important things – friendship and bravery and – oh Harry – be careful!"</p>
+            <p class="reference">Harry Potter and the Philosopher's Stone</p>
+            <p class="speaker">Hermione Granger</p>
+        </div>
+        <div id="badass-moments">
+            <h2>Most Badass Moments</h2>
+            <p><i>according to the <a href="https://www.wizardingworld.com/features/hermione-grangers-most-badass-moments" target="_blank">Wizarding World</a></i></p>
+            <div class="side-scroll-container">
+                <img src="./images/badass-moments-1.png" alt="When she slapped Malfoy">
+                <img src="./images/badass-moments-2.png" alt="When she withstood Bellatrix’s torture">
+                <img src="./images/badass-moments-3.png" alt="When she stormed out of Divination">
+                <img src="./images/badass-moments-4.png" alt="When she Confunded McLaggen">
+                <img src="./images/badass-moments-5.png" alt="When she stood up to Ron">
+            </div>
+        </div>
+
         <p id="footer">For more in-depth information about Hermione Granger, click <a id="tribute-link" href="https://harrypotter.fandom.com/wiki/Hermione_Granger" target="_blank">here</a>.</p>
     </main>
 </body>
